styling, routing, refactoring

--- a/src/styles/Stopwatch.css
+++ b/src/styles/Stopwatch.css
@@ -1,8 +1,17 @@
-.stopwatch {
+/* .practice-stopwatch {
   text-align: center;
   padding-top: 5vh;
   padding-bottom: 5vh;
   font-size: 10vh;
   background-color: #2f4f4f;
   color: white;
-}
+} */
+
+/* .dashboard-stopwatch {
+  text-align: center;
+  padding-top: 10vh;
+  padding-bottom: 5vh;
+  font-size: 10vh;
+  background-color: #2f4f4f;
+  color: white;
+} */
