--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,11 +1,6 @@
-.App {
-  height: 100vh;
-  width: 100vw;
-}
-
-.teacher {
+/* .teacher-dashboard {
   background-color: #2f4f4f;
   padding: 5vh;
   height: 100%;
   width: 100%;
-}
+} */
