--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,3 +40,13 @@
   height: 90%;
   padding: 2%;
 }
+
+.circleAnimation {
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
+  width: 50%;
+  background-color: #f8f8ff;
+  border-color: #00FF00;
+  transform-origin: 50% 50%;
+}
