--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,8 +55,8 @@
   border-style: dotted;
   border-color: #F1F1F1;
   color: #F1F1F1;
-  font-size: 3vh;
   height: 50%;
   width: 50%;
   margin-top: 5%;
+  padding: 5%;
 }
