--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -60,3 +60,17 @@
   margin-top: 5%;
   padding: 5%;
 }
+
+.studentList {
+  display: inline-block;
+  width: 48%;
+  margin: 1%;
+}
+
+@media only screen and (max-width: 700px) {
+  .studentList {
+    display: inline-block;
+    width: 100%;
+    margin: 1%;
+  }
+}
