--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,10 +17,23 @@
 
 .setup {
   background-color: #2f4f4f;
-  padding: 5vh;
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   height: 100%;
   width: 100%;
   overflow: auto
+}
+
+@media only screen and (max-width: 700px) {
+  .setup {
+    background-color: #2f4f4f;
+    padding: 5vh;
+    height: 100%;
+    width: 100%;
+    overflow: auto
+  }
 }
 
 .featureText {
